--- a/meally.css
+++ b/meally.css
@@ -15,7 +15,7 @@ body{
 }
 
 .bigbt{
-	background-color: #FF4444;
+	background-color: #ff444;
 	font-family: prompt;
 	font-size: 30px;
 	font-weight: 600;
